--- a/0x00-html_advanced/38-styleguide.html
+++ b/0x00-html_advanced/38-styleguide.html
@@ -210,7 +210,7 @@
                     <h2>Video</h2>
                 </header>
 
-                <video controls loop poster="C:\Users\ELETU\Downloads/thumbnail.jpg">
+                <video controls loop poster="C:\Users\ELETU\Downloads\thumbnail.jpg">
                     <source src="C:\Users\ELETU\Downloads\BigBuckBunny.mp4" type="video/mp4">
                     Sorry, your browser doesn't support HTML5 video
                 </video>
